# AIROTC

./: .dockerignore  .gitignore  .submissionignore  AIROTC_ARCHITECTURE.md  AIROTC_WHITEPAPER.md  CROWDEDNESS_VISUAL.html  Dockerfile  ELIZAOS_DELIVERY.md  ELIZAOS_RULES_VERIFICATION.md  GRANT_APPLICATION_DRAFT.md  NEW_SUBMISSION_CHECKLIST.md  PROJECT_STATUS.md  README.md  SUBMISSION_FINAL_REPORT.md  SUBMISSION_README.md  brand.md  docker-compose.yml  package-lock.json  package.json
agents/elizaos-agent/: .env.example  IMPLEMENTATION.md  README.md  START_HERE.md  TESTING.md  character.ts  index.ts  package-lock.json  package.json  setup.sh  tsconfig.json
api-server/: .env.example  Dockerfile  PRODUCTION_READINESS.md  package-lock.json  package.json  testFlow.ts  vitest.config.ts
api-server/prisma/: schema.prisma
api-server/scripts/: test-offers-api.ts  testReputation.ts
api-server/src/: app.ts  server.ts
api-server/tests/: agent_events.test.ts  agent_notifications.test.ts  api-routes.test.ts  encrypt_status_proxy.test.ts  internal_bridge_auth.test.ts  internal_surfaces_security.test.ts  mcp_access_token.test.ts  mcp_token.test.ts  per_marketplace_bridge.test.ts  per_marketplace_offer_flow.test.ts  per_ticket_redaction.test.ts  security-audit.test.ts  solana_event_listener_config.test.ts  spl-lifecycle.test.ts  stats_consistency.test.ts  stress-test.ts  torque_reward_wallet_bridge.test.ts  transaction_monitor_status_policy.test.ts  wallet_auth_binding.test.ts  webhook_delivery.test.ts
docs/: AGENT_API_REFERENCE.md  AIR_OTC_Whitepaper.md  EVIDENCE_REGISTRY.md  HOW_TO_VERIFY.md  JUDGE_DEMO_SCRIPT.md  architecture.md  meridian_architecture_ascii.txt
docs/proof-evidence/: README.md
eliza-agents/: .env.example  package-lock.json  package.json
eliza-agents/src/: elizaos-core.ts  run.ts
escrow/: Anchor.toml  SECURITY_AUDIT.md  package-lock.json  package.json
escrow/programs/escrow-confidential/: Cargo.toml
escrow/programs/escrow-confidential/src/: lib.rs
escrow/programs/magicblock-negotiation/: Cargo.toml
escrow/programs/magicblock-negotiation/src/: lib.rs
escrow/scripts/: upgrade-magicblock-negotiation.sh
escrow/tests/: escrow.ts
external-agents/: .env.example  package.json
external-agents/src/: run.ts
frontend/: README.md  e2e-test.mjs  package-lock.json  package.json
frontend/app/: globals.css  globals.css.bak  layout.tsx  page.tsx
ika-bridge/: Cargo.toml
ika-bridge/src/: main.rs
landing-page/: deal-flow-animation.html
middleman-agent/: .env.example  .gitignore  Beliefs.json  Dockerfile  SUBMISSION_GUIDE.md  buyer-agent.ts  detected_habits.json  interests.json  life_events.json  package-lock.json  package.json  test-commit.ts  test-ix.ts  vitest.config.ts
scripts/: hosted-mcp-offline-resume-e2e.mjs  hosted-mcp-offline-resume-e2e.test.mjs  manus-local-sdk-agent.cjs
sdk/: README.md
sdk/python/: README.md  pyproject.toml  test_per_vectors.py  test_sdk.py
sdk/python/agentotc/src/agentotc/: __init__.py  api.py  autopilot.py  client.py  deal.py  errors.py  per.py  types.py  workflows.py  ws.py
sdk/python/agentotc_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: confidential-e2e.test.ts  encrypt-integration.test.ts  ika-integration.test.ts
(+439 files in other folders)
