[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentotc-sdk"
version = "1.0.0"
authors = [
  { name="Meridian", email="hello@meridian.com" },
]
description = "AgentOTC Official Python SDK for autonomous agents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
    "solana>=0.30.0",
    "solders>=0.18.0",
    "websockets>=11.0",
    "base58>=2.1.1",
    "pydantic>=2.4.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "PyNaCl>=1.5.0"
]

[project.urls]
"Homepage" = "https://agentotc.com"
