[package]
name = "escrow-confidential"
version = "0.1.0"
description = "Confidential escrow with Encrypt (FHE) and Ika (dWallet) CPI integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_confidential"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
sha2 = "0.10"
hex = "0.4"
encrypt-types = { path = "../../../.tmp/encrypt-pre-alpha/crates/encrypt-types", default-features = false }
encrypt-solana-types = { path = "../../../.tmp/encrypt-pre-alpha/chains/solana/program-sdk/types" }
encrypt-dsl = { package = "encrypt-solana-dsl", path = "../../../.tmp/encrypt-pre-alpha/chains/solana/program-sdk/dsl" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
