[package]
name = "magicblock-negotiation"
version = "0.1.0"
description = "AIR OTC MagicBlock Negotiation Session — delegation-compatible via ephemeral-rollups-sdk"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magicblock_negotiation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
ephemeral-rollups-sdk = { version = "0.11.1", features = ["anchor", "access-control"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
